@@ -2196,7 +2196,7 @@ tmpl_disabled_urlsel=Redirect to $1
 tmpl_disabled_urlnone=None (local HTML)
 tmpl_phpmode=Default PHP exection mode
 tmpl_phpver=Default PHP version
-tmpl_php_ini=Template PHP configuration file
+tmpl_php_iniv=Template PHP $1 configuration file
 tmpl_php_noedit=Allow editing of PHP configuration?
 tmpl_rubymode=Default Ruby execution mode
 tmpl_phpverdef=Lowest available
