@@ -690,3 +690,4 @@ Removed the batch alias creation page, as it has be superceded by manual alias m
 Migrated cPanel users with forwarding have email also delivered to their inbox, to maintain consistency with cPanel.
 Added a script installer for the Movable Type blogging platform.
 When an existing database is imported to a virtual server, the MySQL or PostgreSQL permissions to it are properly granted. Similarly, when a database is dis-associated, permissions to it and directory group permissions are properly removed.
+In the Server Templates section, separate template php.ini files can be specified for PHP versions 4 and 5.
